--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,12 @@ nw/*
 observation/*
 old_results/
 pyraf/*
-RefStar/mod/*
-RefStar/noneed/*
-RefStar/old/*
-RefStar/ori/*
-RefStar/plot/*
-RefStar/RefStar/*
+RefStar/mod*
+RefStar/noneed*
+RefStar/old*
+RefStar/ori*
+RefStar/plot*
+RefStar/RefStar*
 *mag_InstMag*/*
 tmp/*
 uparm/*
